<resources>
    <string name="app_name">Swoosh</string>
    <string name="description_on_welcome_screen">Find a team in your city and dominate the league</string>
    <string name="get_started">GET STARTED</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="swoosh_logo">Swoosh Logo</string>
    <string name="welcome_screen_background_image">Welcome screen background image</string>
</resources>